src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body,
:root,
#root {
  margin: 0;
  height: 100%;

  background-image: url('./assets/blue.jpeg');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;

  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
.error {
  position: absolute;
  top: 40%;
  left: 50%;
  transform: translate(-50%, -50%);
}
.error h1 {
  font-size: 3.2em;
  line-height: 1.1;
  font-weight: 600;
  margin-bottom: 50px;
}
.error p {
  line-height: 1.1;
  font-weight: 500;
}

